--- a/configs/seq2seq/aiayn.yaml
+++ b/configs/seq2seq/aiayn.yaml
@@ -6,7 +6,7 @@ tokenizer: bert-base-multilingual-cased
 
 positional_encoding: sinusoidal
 tie_embeddings: True
-padding_value: 0
+ignore_token_id: -100
 
 encoder_config:
   device: cpu
